# bfxr2

./: .gitignore  CHANGELOG.md  Makefile  README.md  index.html
css/: index.css
desktop/: AppRun  Makefile  README.md  bfxr2.desktop  go.mod  main.go  webview.go
js/: Tab.js  index.js
js/audio/: Bfxr_DSP.js  RealizedSound.js
js/synths/: Bfxr.js  Footsteppr.js  Transfxr.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/frontend/: index.html
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
