[package]
name = "bfxr2"
version = "1.0.0"
description = "Sound effects generator for games"
edition = "2021"

[lib]
name = "bfxr2_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
